AirquipUAT/force-app/main/default/objects/Vehicle_Location__c/Vehicle_Location__c.object-meta.xml
<CustomObject>
    <label>Vehicle Location</label>
    <nameField>
        <label>Vehicle Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>