AirquipUAT/force-app/main/default/objects/Vehicle_Location__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <externalId>true</externalId>
    <label>Device Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>