AirquipUAT/force-app/main/default/objects/Vehicle_Location__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>