AirquipUAT/force-app/main/default/objects/Vehicle_Location__c/fields/Longitude_c__c.field-meta.xml
<CustomField>
    <fullName>Longitude_c__c</fullName>
    <label>Longitude__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>