AirquipUAT/force-app/main/default/objects/Vehicle_Location__c/fields/Recorded_At__c.field-meta.xml
<CustomField>
    <fullName>Recorded_At__c</fullName>
    <label>Recorded At</label>
    <type>DateTime</type>
</CustomField>